/* 
  Localizable.strings
  TicTacToe

  Created by Jake Mobile Dev on 2/8/18.
  Copyright © 2018 JakeMobileDev. All rights reserved.
*/

"Player One's Turn" = "Player One's Turn";
"Player Two's Turn" = "Player Two's Turn";
"New Game" = "New Game";
"Back" = "Back";
"Draw!" = "Draw!";
"Player One Wins!" = "Player One Wins!";
"Player Two Wins!" = "Player Two Wins!";
"Player One" = "Player One";
"Player Two" = "Player Two";
"Tic Tac Toe" = "Tic Tac Toe";
"Start Game" = "Start Game";
"Game Mode" = "Game Mode";
"Human Vs Human" = "Human vs Human";
"Your Turn" = "Your Turn";
"Computer's Turn" = "Computer's Turn";
"You" = "You";
"Computer" = "Computer";
"Easy" = "Easy";
"Medium" = "Medium";
"Impossible" = "Impossible";
"Computer's Turn" = "Computer's Turn";
"You Win!" = "You Win!!!";
"Computer Beat You!" = "Computer Beat You!";
