...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8xc-It-P23" userLabel="Top Left Square">
                                        <rect key="frame" x="0.0" y="0.0" width="85.5" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="topLeft"/>
                                        <connections>
                                            <action selector="squareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EoS-JO-CIw"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fw3-B1-ama" userLabel="Top Square">
                                        <rect key="frame" x="94.5" y="0.0" width="86" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="top"/>
                                        <connections>
                                            <action selector="squareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rMg-7c-GJ8"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QeU-Zf-oig" userLabel="Top Right Square">
                                        <rect key="frame" x="189.5" y="0.0" width="86" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="topRight"/>
                                        <state key="normal">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FLU-a7-bS0" userLabel="Left Square">
                                        <rect key="frame" x="0.0" y="94.5" width="85.5" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="left"/>
                                        <connections>
                                            <action selector="squareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lpc-oA-IA0"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzK-Eh-Vpk" userLabel="Centre Square">
                                        <rect key="frame" x="94.5" y="94.5" width="86" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="centre"/>
                                        <connections>
                                            <action selector="squareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DaE-wx-smC"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r09-VN-bd1" userLabel="Right Square">
                                        <rect key="frame" x="189.5" y="94.5" width="85.5" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="right"/>
                                        <connections>
                                            <action selector="squareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="abf-Gq-ypq"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FGK-8G-dNR" userLabel="Bottom Left Square">
                                        <rect key="frame" x="0.0" y="190" width="85.5" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="bottomLeft"/>
                                        <connections>
                                            <action selector="squareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uoG-12-SXg"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUj-jE-NWe" userLabel="Bottom Square">
                                        <rect key="frame" x="94.5" y="190" width="86" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="bottom"/>
                                        <connections>
                                            <action selector="squareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IUl-gL-8g1"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e78-RT-rj2" userLabel="Bottom Right Square">
                                        <rect key="frame" x="189.5" y="190" width="85.5" height="85"/>
                                        <accessibility key="accessibilityConfiguration" identifier="bottomRight"/>
                                        <connections>
                                            <action selector="squareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8ji-Bz-xOe"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PWk-ib-Bmc" userLabel="New Game">
                                        <rect key="frame" x="0.0" y="60.5" width="275" height="57.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="newGame"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="New Game">
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLA-yh-fDj" userLabel="Player One Score">
                                        <rect key="frame" x="10" y="45.5" width="150.5" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="playerOneScore"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.0" green="0.67843137249999996" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
